// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm cLqvxn"
  >
    text
    <span
      class="sc-AxirZ jQTRoZ"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm cLqvxn"
  >
    text
    <span
      class="sc-AxirZ VuNJj"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
